[Update] Preenchimento de algumas informações sobre a Asipeca e mudança no sitemap

--- a/bin/src/main/resources/templates/default.html
+++ b/bin/src/main/resources/templates/default.html
@@ -22,6 +22,8 @@
 
     <!-- Default -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Sitemap -->
+    <link rel="stylesheet" href="../css/sitemap.css">
     <!-- Home -->
     <link rel="stylesheet" href="../css/home.css">
     <!-- Cissao visao e valores -->
