--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="row mt-4">
-                    <h5 style="font-weight: bold">Siga a nossa página no Facebook ou no Instagram</h5>
+                    <h5 style="font-weight: bold">Siga a nossa página no Facebook e no Instagram</h5>
                 </div>
 
                 <div class="row mt-4 mb-2">
@@ -56,12 +56,17 @@
                 </div>
                 
                 <div class="row mt-4">
-                    <h5 style="font-weight: bold">Envie-nos uma pergunta pelo e-mail: </h5>
+                    <h5 style="font-weight: bold">Envie-nos uma pergunta em um de nossos e-mails: </h5>
                 </div>
                 
                 <div class="row mt-2">
                     <span data-feather="mail" style="align-self: center">E-mail</span>
                     <h5 class="ml-2">asi_peca@hotmail.com</h5>
+                </div>
+
+                <div class="row mt-2">
+                    <span data-feather="mail" style="align-self: center">E-mail</span>
+                    <h5 class="ml-2">contato.asipeca@hotmail.com</h5>
                 </div>
 
                 <div class="row mt-4">
