--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -22,6 +22,8 @@
 
     <!-- Default -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Sitemap -->
+    <link rel="stylesheet" href="../css/sitemap.css">
     <!-- Home -->
     <link rel="stylesheet" href="../css/home.css">
     <!-- Cissao visao e valores -->
@@ -53,7 +55,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <!-- TODO: templates -->
                     <a class="dropdown-item" th:href="@{/historia}">História</a>
-                    <a class="dropdown-item" th:href="@{/mvv}">Missão Visão e Valores</a>
+                    <a class="dropdown-item" th:href="@{/missao-visao-valores}">Missão Visão e Valores</a>
                     <a class="dropdown-item" th:href="@{/equipe}">Equipe</a>
                     <a class="dropdown-item" th:href="@{/parceiros}">Parceiros</a>
                     <a class="dropdown-item" th:href="@{/certificacoes}">Certificações</a>
