--- a/src/main/resources/templates/historia.html
+++ b/src/main/resources/templates/historia.html
@@ -51,36 +51,44 @@
                     <h1>Nossa História . . .</h1>
                 </div>
                 <div class="row" align="justify" style="font-size: 1.1em">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius est nulla, id rhoncus orci malesuada sit
-                    amet. Aliquam hendrerit feugiat nunc, in scelerisque nunc sodales vel. Nulla facilisi. Ut augue ante, luctus nec
-                    pulvinar at, egestas vel magna. Nulla blandit dolor ac nulla scelerisque, sit amet lacinia diam tempor. Vestibulum non
-                    ullamcorper eros, vel elementum nisi. Pellentesque placerat dictum lorem, at sagittis arcu mattis vitae. Phasellus diam
-                    eros, luctus viverra convallis ut, rhoncus eget justo. Sed tempor orci ut mauris vulputate sollicitudin. Cras luctus
-                    consectetur turpis ut tincidunt. Donec finibus aliquam lectus, vitae vulputate lorem semper et. Pellentesque vitae dolor
-                    ante.
+                    <p>Tudo começou em 2001, quando Nilton Antunes Fogaça - que viria a ser o fundador da Asipeca - teve câncer na bexiga.
+                    Atento ao que estava acontecendo ao seu redor e sentindo os sintomas, resolveu fazer exames de prevenção e nos
+                    resultados foi detectada a doença.
                     <br> <br>
-                    Nullam dui odio, dapibus quis efficitur sed, elementum sed nibh. Mauris consectetur elit in orci dapibus, quis placerat
-                    leo vestibulum. Sed pellentesque ligula eu varius efficitur. Sed sem ante, pulvinar vel dui vel, vulputate sodales
-                    risus. Vivamus quis neque efficitur, congue lectus vel, semper dui. Vestibulum maximus neque libero, quis dignissim
-                    lorem vulputate et. Nulla sed diam tincidunt, semper sem pretium, imperdiet nisi. Nullam ex velit, cursus quis facilisis
-                    in, consequat nec nunc. Aenean vehicula ullamcorper lacus. Vestibulum accumsan libero est, id rhoncus tortor laoreet ut.
+                    A família, ao receber a notícia, ficou impactada, como era de se esperar, mas Nilton pediu para que eles fossem fortes.
+                    Começou então o tratamento. Neste período, ele foi encaminhado para uma instituição que ajudava pacientes oncológicos.
+                    No local, era recebido muito bem e os demais participantes ajudavam e apoiavam uns aos outros. Porém, ao chegar certo
+                    dia, foi surpreendido com a informação que o lugar teria sido lacrado pela Polícia Federal, pois na denúncia que fizeram
+                    alegaram que aquela instituição estava desviando verba.
                     <br> <br>
-                    Donec scelerisque tortor orci, sed eleifend massa aliquet id. Fusce molestie massa at nunc ullamcorper consequat. Nullam
-                    augue erat, aliquam in dolor sed, consectetur viverra turpis. Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Curabitur mattis, urna quis accumsan tempus, metus orci lacinia massa, nec venenatis
-                    erat nibh ut odio. Aenean ornare mi at ante posuere condimentum. Nulla facilisi. Fusce purus lacus, convallis id purus
-                    vel, auctor imperdiet lorem. Quisque pellentesque, eros a interdum pellentesque, dui dolor pretium dui, eu rhoncus odio
-                    ligula non erat.
+                    Vários pacientes, presentes naquele momento, ficaram desesperados, sem saber o que fazer e para onde ir. Foi então que
+                    Nilton olhou para o céu e disse “Deus, mande uma ajuda”. Logo após dizer isso, Nilton sentiu seu coração aquecido e
+                    propôs então aos demais pacientes para montarem a própria associação. Todos concordaram e o escolheram para ser o líder
+                    do projeto. Assim, Nilton levou todos para a casa dele.
                     <br> <br>
-                    In posuere dui non elit consectetur commodo. Curabitur sed sapien lobortis, bibendum lorem at, maximus sapien. Maecenas
-                    semper magna magna, sed commodo tellus mollis id. Duis ex velit, dignissim in vestibulum in, consequat a arcu. Morbi
-                    rhoncus efficitur erat quis laoreet. Donec lorem ex, molestie a libero non, finibus imperdiet justo. Phasellus non
-                    tincidunt tellus, in fringilla justo. Suspendisse potenti. Morbi nec dolor velit. Aliquam tempor convallis enim, non
-                    laoreet libero ultrices nec. Aenean quis turpis vitae justo elementum ullamcorper a eu felis.
+                    Na época, moravam ele, a esposa, o filho e a filha, que ficaram assustados e sem entender o havia acontecido quando ele
+                    chegou. Nisso, a filha questionou: “e agora, pai?”. E Nilton de prontidão respondeu: “agora vou pedir ao seu irmão para
+                    ceder o quarto dele. Vocês terão que ficar mais apertados dentro de casa, pois iremos usar o quarto dele para realizar
+                    os nossos encontros diários”. O filho, Nilton Antunes Fogaça Filho, aceitou de imediato o pedido do pai e então ele e os
+                    pacientes começaram a se encontrar todos os dias na casa de Nilton. Buscaram quais os documentos necessários para a
+                    regularização e assim criaram o nome ASIPECA (Associação de Socorro Imediato a Pessoas com Câncer). O nome foi escolhido
+                    justamente devido ao desespero daquela fase. Assim, nasceu a ASIPECA, no dia 7 de março de 2007, fundada por pacientes e
+                    seus familiares.
                     <br> <br>
-                    Donec mi orci, luctus quis rhoncus ac, fermentum id libero. Duis eget ante cursus, faucibus libero ut, consequat arcu.
-                    Donec in enim sed quam sagittis bibendum in a nibh. Maecenas risus neque, dictum in ultricies in, semper nec neque.
-                    Morbi et libero vel urna tincidunt aliquet. Pellentesque non lobortis quam. Etiam hendrerit eleifend rhoncus.</p>
+                    Posteriormente, com tudo mais organizado, Nilton voltou a estudar, já que teria estudado até a quarta série. Completou
+                    até o colegial, entendendo que deveria ter mais conhecimento para dirigir uma instituição.
+                    <br> <br>
+                    Com o tempo e o crescimento da associação, já não cabia mais a ASIPECA e a família de Nilton no mesmo local. Assim, ele
+                    e sua esposa, Célia Maria Alencar Fogaça, decidiram alugar uma casa para a família e cedeu a deles para ser a sede da
+                    ASIPECA, seguindo as normas da vigilância sanitária, do corpo de bombeiros e realizando as adaptações necessárias.
+                    <br> <br>
+                    A ASIPECA cresceu tanto que a filha de Nilton, Ana Fogaça, saiu de seu trabalho atual para ajudar o pai nesta empreitada. 
+                    Logo depois, a cunhada de Ana, Letícia Hoffman Castanho, também chegou para somar rumo ao objetivo de acolher estes pacientes 
+                    da melhor forma possível.
+                    <br> <br>
+                    Atualmente, a ASIPECA possui mais de 40 pessoas entre voluntários e profissionais contratados, mais de 300 pacientes
+                    cadastrados de Sorocaba e região, sendo adultos com idade acima de 18 anos.
+                    </p>
                     <br> <br>
                 </div>
             </div>
