--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,16 +22,16 @@
                         </div>
                         <div class="card-body">
                             <p id="history">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius est nulla, id rhoncus orci malesuada sit
-                                amet. Aliquam hendrerit feugiat nunc, in scelerisque nunc sodales vel. Nulla facilisi. Ut augue ante, luctus nec
-                                pulvinar at, egestas vel magna. Nulla blandit dolor ac nulla scelerisque, sit amet lacinia diam tempor. Vestibulum non
-                                ullamcorper eros, vel elementum nisi. Pellentesque placerat dictum lorem, at sagittis arcu mattis vitae. Phasellus diam
-                                eros, luctus viverra convallis ut, rhoncus eget justo. Sed tempor orci ut mauris vulputate sollicitudin. Cras luctus
-                                consectetur turpis ut tincidunt. Donec finibus aliquam lectus, vitae vulputate lorem semper et. Pellentesque vitae dolor
-                                ante.
+                                Tudo começou em 2001, quando Nilton Antunes Fogaça - que viria a ser o fundador da Asipeca - teve câncer na bexiga.
+                                Atento ao que estava acontecendo ao seu redor e sentindo os sintomas, resolveu fazer exames de prevenção e nos
+                                resultados foi detectada a doença. <br> A família, ao receber a notícia, ficou impactada, como era de se esperar, mas Nilton pediu para que eles fossem fortes.
+                                Começou então o tratamento. Neste período, ele foi encaminhado para uma instituição que ajudava pacientes oncológicos.
+                                No local, era recebido muito bem e os demais participantes ajudavam e apoiavam uns aos outros. Porém, ao chegar certo
+                                dia, foi surpreendido com a informação que o lugar teria sido lacrado pela Polícia Federal, pois na denúncia que fizeram
+                                alegaram que aquela instituição estava desviando verba.
                             <br>
-                            <span id="last-line1">Nullam dui odio, dapibus quis efficitur sed,</span><span id="last-line2"> elementum sed nibh. Mauris consectetur elit in orci dapibus, </span><span id="last-line3">quis placerat
-                                leo vestibulum. Sed pellentesque lig</span><span id="last-line4">ula eu varius efficitur. Sed sem ante </span><a th:href="@{/historia}" id="ver-mais">ver mais...</a>
+                            <span id="last-line1">Vários pacientes, presentes naquele momento, ficaram desesperados,</span><span id="last-line2"> sem saber o que fazer e para onde ir. </span><span id="last-line3">
+                                Foi então que Nil</span><span id="last-line4">ton olhou para </span><a th:href="@{/historia}" id="ver-mais">ver mais...</a>
                             </p>
                         </div>
                         <!-- <div class="card-footer">
@@ -147,7 +147,7 @@
                         </div>
                         <div class="row">
                             <span data-feather="mail" style="align-self: center">E-mail</span>
-                            <h5 class="ml-2">asi_peca@hotmail.com</h5>
+                            <h5 class="ml-2">contato.asipeca@hotmail.com</h5>
                         </div>
                     </div>
                     <div class="col-md-4">
