--- a/src/main/resources/templates/missaovisaovalores.html
+++ b/src/main/resources/templates/missaovisaovalores.html
@@ -37,7 +37,14 @@
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
-                        Nossa missão é...
+                        <ul>
+                            <li>Acolher todo paciente que procurar a ASIPECA e suprir suas necessidades imediatas, oferecendo apoio, direcionamento e
+                            encaminhamento.</li>
+                            <li>Fornecer atendimento completo para cada paciente com patologia oncológica, estendendo-o para seus familiares e
+                            cuidadores.</li>
+                            <li>Oferecer atividades que promovam fortalecimentos de vínculos, autonomia, resgate de valores e bem estar
+                            biopsicossocial.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -52,7 +59,9 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                        Nossa visão é...
+                        Ser referência no País de forma humanizada em atendimento psicossocial para pessoas com patologia oncológica e seus
+                        familiares e ou cuidadores, oferecendo serviços com qualidade e eficiência, proporcionando completo bem estar físico,
+                        psicológico e social.
                     </div>
                 </div>
             </div>
@@ -67,7 +76,31 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                        Nossos valores são...
+                        Somos baseados em princípios fundamentos como o atendimento humanizado, garantia de direitos, responsabilidades, foco em
+                        resultados, ética, amor e respeito.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="headingFour">
+                    <h5 class="mb-0">
+                        <a id="header-text" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                            aria-controls="collapseFour">
+                            Objetivos
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                    <div class="card-body">
+                        <ul>
+                            <li>Assegurar espaços de referência para o convívio grupal, comunitário e social, priorizando o desenvolvimento de
+                            relações de afetividade, solidariedade e respeito mútuo.</li>
+                            <li>Detectar necessidades e motivações, bem como desenvolver potencialidades e capacidades para novos projetos de vida.</li>
+                            <li>Propiciar vivências que valorizem as experiências, estimulem e potencializem a condição de escolher e decidir,
+                            contribuindo para o desenvolvimento da autonomia e protagonismo social dos usuários.</li>
+                            <li>Auxiliar no processo de tratamento de câncer através do apoio psicológico e terapias alternativas, estendendo algumas
+                            atividades aos familiares destes pacientes.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
