[update] adicionando parceiros

--- a/src/main/resources/templates/parceiros.html
+++ b/src/main/resources/templates/parceiros.html
@@ -27,103 +27,42 @@
 
             <div class="col-md-12">
                 <div class="row ml-5" style="display: flexbox">
-                    <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                        <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Parceiro 1</h5>
+                    <div class="card mr-2 mb-2" style="max-width: 150px">
+                    	<div class="card-body">
+                    		<a href="https://www.johnsoncontrols.com/pt_br" target="_blank">
+                        		<img th:src="@{/img/brasao-pms.png}" class="card-img-top" alt="Prefeitura Municipal de Sorocaba">
+                        	    <h5 class="card-title">Prefeitura Municipal de Sorocaba</h5>
+                        	</a>
                         </div>
                     </div>
 
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 2</h5>
-                    </div>
-                </div>
+                	<div class="card mr-2 mb-2" style="max-width: 150px">
+                		<div class="card-body">
+                			<a href="https://www.aptosmed.com.br/" target="_blank">
+                    			<img th:src="@{/img/aptos.png}" class="card-img-top" alt="...">
+                                <h5 class="card-title">Aptos</h5>
+                            </a>
+                        </div>
+                	</div>
             
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 3</h5>
+                	<div class="card mr-2 mb-2" style="max-width: 150px">
+                   		<div class="card-body">
+                   			<a href="https://www.johnsoncontrols.com/pt_br">
+               					<img th:src="@{/img/tauste.png}" class="card-img-top" alt="Tauste"/>
+                    			<h5 class="card-title">Tauste</h5>
+                    		</a>
+                    	</div>
                     </div>
-                </div>
 
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 4</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 5</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 6</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 7</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 8</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 9</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 10</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 11</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 12</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 13</h5>
-                    </div>
-                </div>
-
-                <div class="card mr-2 mb-2" style="max-width: 150px; max-height: 200px">
-                    <img th:src="@{/img/logo.png}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Parceiro 14</h5>
-                    </div>
-                </div>
+                	<div class="card mr-2 mb-2" style="max-width: 150px">
+                   		<div class="card-body">
+                    		<a href="https://www.johnsoncontrols.com/pt_br">
+                    			<img th:src="@{/img/johnson-controls.png}" class="card-img-top" alt="Johnson Controls"/>
+                    			<h5 class="card-title">Johnson Controls</h5>
+                    		</a>
+                    	</div>
+                	</div>
+            	</div>
             </div>
 
             <div class="row mt-5">
