--- a/src/main/resources/templates/missaovisaovalores.html
+++ b/src/main/resources/templates/missaovisaovalores.html
@@ -52,7 +52,7 @@
                 <div class="card-header" id="headingTwo">
                     <h5 class="mb-0">
                         <a id="header-text" data-toggle="collapse" data-target="#collapseTwo"
-                            aria-expanded="false" aria-controls="collapseTwo">
+                            aria-expanded="true" aria-controls="collapseTwo">
                             Visão
                         </a>
                     </h5>
@@ -69,7 +69,7 @@
                 <div class="card-header" id="headingThree">
                     <h5 class="mb-0">
                         <a id="header-text" data-toggle="collapse" data-target="#collapseThree"
-                            aria-expanded="false" aria-controls="collapseThree">
+                            aria-expanded="true" aria-controls="collapseThree">
                             Valores
                         </a>
                     </h5>
@@ -84,7 +84,7 @@
             <div class="card">
                 <div class="card-header" id="headingFour">
                     <h5 class="mb-0">
-                        <a id="header-text" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                        <a id="header-text" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true"
                             aria-controls="collapseFour">
                             Objetivos
                         </a>
