--- a/src/main/resources/templates/balanco.html
+++ b/src/main/resources/templates/balanco.html
@@ -42,6 +42,7 @@
                         DRE
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../2019/demonstracao-resultados.pdf" target="_blank">2019</a>
                         <a class="dropdown-item" href="../2018/2018dre.pdf" target="_blank">2018</a>
                         <a class="dropdown-item" href="../2017/dre2017.pdf" target="_blank">2017</a>
                     </div>
@@ -54,6 +55,7 @@
                         BALANÇO
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../2019/balanco-patrimonial.pdf" target="_blank">2019</a>
                         <a class="dropdown-item" href="../2018/2018balanco.pdf" target="_blank">2018</a>
                         <a class="dropdown-item" href="../2017/balanco2017.pdf" target="_blank">2017</a>
                     </div>
@@ -66,6 +68,7 @@
                         BALANCETE
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../2019/balancete.pdf" target="_blank">2019</a>
                         <a class="dropdown-item" href="../2018/2018balancete.pdf" target="_blank">2018</a>
                         <!-- <a class="dropdown-item" href="../2017/balancete2017.pdf" target="_blank">2017</a> -->
                     </div>
@@ -78,6 +81,7 @@
                         CRC
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../2018/crc.pdf" target="_blank">2019</a>
                         <a class="dropdown-item" href="../2018/2018crc.pdf" target="_blank">2018</a>
                     </div>
                 </div>
@@ -89,6 +93,7 @@
                         Demonstrações contábeis
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../2019/demonstracao-resultados.pdf" target="_blank">2019</a>
                         <a class="dropdown-item" href="../2018/2018demostracoesContabeis.pdf" target="_blank">2018</a>
                     </div>
                 </div>
